Fix text align

--- a/src/pages/Detectors/Detectors.css
+++ b/src/pages/Detectors/Detectors.css
@@ -35,6 +35,7 @@
     line-height: 1.9em;
     min-width: 100%;
     display: flex;
+    justify-content: center;
     gap: 2rem;
 }
 
